# korak

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  docbuild.py  requirements.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
doc/: Makefile  api.html  conf.py  deployment.rst  genindex.html  index.html  index.rst  intro.html  intro.rst  objects.inv  sdk_usage.rst  search.html  searchindex.js  tests.rst  tutorial.html  ui.rst  utils.rst
doc/tests/: ibox_system.rst  io_traffic.rst  power_management.rst  standalone_test.rst
doc/utils/: fcport_management.rst  ibox_drives.rst  ibox_system.rst  power_management.rst
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
korak/: config.py  manage.py
korak/lib/: exceptions.py
korak/migrations/: 000000_baseline.py  000005_create_table_machine.py  000005_posts_table.py  000010_followers_table.py
korak/webapp/: __init__.py  api
krabby/: __init__.py  cli.py  config.py  dbadmin.py  manage.py
krabby/dba/: __init__.py
krabby/lib/: decorators.py  helpers.py
krabby/migrations/: 000000_baseline.py  000005_create_table_customer.py  000015_create_table_task.py  000020_create_table_type.py  000030_create_table_task_type_map.py  000035_create_table_session.py  000040_create_table_comment.py  000045_create_table_session_task.py  000050_create_table_suite.py  (+6 more)
scripts/: devserver.sh  resetdb_dev.sh  run_pytest.py  setvenv.sh  unsetvenv.sh  upgradedb_dev.sh
tests/: __init__.py  test_krabby.py
(+137 files in other folders)
