[metadata]
name = ivt
classifiers =
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
description = Infinidat IVT Tools and Tests
license = Proprietary
author = Infinidat
version = 0.0.1

[extras]
doc =
    sphinx
    alabaster
testing =
    pylint
